
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int uint8_t ;


 int DDRB ;
 int PORTB ;
 int USB_LED_CAPS_LOCK ;

void led_set_kb(uint8_t usb_led) {
    DDRB |= (1<<4);
    if (usb_led & (1<<USB_LED_CAPS_LOCK)) {

        PORTB |= (1<<4);
    } else {

        PORTB &= ~(1<<4);
    }
}
