; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/clueboard/66/rev3/extr_rev3.c_led_set_kb.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/clueboard/66/rev3/extr_rev3.c_led_set_kb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DDRB = common dso_local global i32 0, align 4
@USB_LED_CAPS_LOCK = common dso_local global i32 0, align 4
@PORTB = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @led_set_kb(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @DDRB, align 4
  %4 = or i32 %3, 16
  store i32 %4, i32* @DDRB, align 4
  %5 = load i32, i32* %2, align 4
  %6 = load i32, i32* @USB_LED_CAPS_LOCK, align 4
  %7 = shl i32 1, %6
  %8 = and i32 %5, %7
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = load i32, i32* @PORTB, align 4
  %12 = or i32 %11, 16
  store i32 %12, i32* @PORTB, align 4
  br label %16

13:                                               ; preds = %1
  %14 = load i32, i32* @PORTB, align 4
  %15 = and i32 %14, -17
  store i32 %15, i32* @PORTB, align 4
  br label %16

16:                                               ; preds = %13, %10
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
